--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -1,6 +1,6 @@
 html {
   font-size: 10px;
-  background:url(http://i.imgur.com/b9r5sEL.jpg) bottom center;
+  background:url(https://vsg-kleinsteinbach.de/wp-content/themes/template/standard/images/backgrounds/volleyball3_compressed_xl.jpg) bottom center;
   background-size: cover;
 }
 body,html {
@@ -33,8 +33,8 @@ body,html {
 
 .playing {
   transform:scale(1.1);
-  border-color:#ffc600;
-  box-shadow: 0 0 10px #ffc600;
+  border-color:#1aa7c6;
+  box-shadow: 0 0 10px #1aa7c6;
 }
 
 kbd {
@@ -46,5 +46,5 @@ kbd {
   font-size: 1.2rem;
   text-transform: uppercase;
   letter-spacing: 1px;
-  color:#ffc600;
+  color:#1aa7c6;
 }
